--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     implementation project(':details')
     implementation project(':listpokemon')
+    implementation project(':core')
 
     // BoM for the Firebase platform
     implementation platform('com.google.firebase:firebase-bom:26.8.0')
@@ -48,6 +49,10 @@ dependencies {
     // Crashlytics and Analytics
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation 'com.google.firebase:firebase-analytics-ktx'
+
+    //Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
