--- a/listpokemon/build.gradle
+++ b/listpokemon/build.gradle
@@ -49,6 +49,9 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.2"
     implementation 'androidx.fragment:fragment-ktx:1.3.2'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
