--- a/core/build.gradle
+++ b/core/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.2.6'
     kapt 'androidx.room:room-compiler:2.2.6'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
+
     implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
