--- a/details/build.gradle
+++ b/details/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.2.2"
     implementation 'androidx.fragment:fragment-ktx:1.3.2'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
+
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
@@ -71,4 +73,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    testImplementation "io.mockk:mockk:1.10.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
 }
