--- a/details/build.gradle
+++ b/details/build.gradle
@@ -79,4 +79,5 @@ dependencies {
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation project(':core')
 }
