--- a/listpokemon/build.gradle
+++ b/listpokemon/build.gradle
@@ -71,8 +71,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     testImplementation "io.mockk:mockk:1.10.0"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.3'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation project(':core')
 }
